<resources>
    <string name="app_name">Puntos Adoc</string>
    <string name="email">&#160;&#160;Correo Electrónico *</string>
    <string name="password">&#160;&#160;Contraseña</string>
    <string name="registrate">¡REGÍSTRATE!</string>
    <string name="registrarme">¡REGISTRARME!</string>
    <string name="olvidastecontrasena"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">Nombre *</string>
    <string name="apellidos">Apellidos *</string>
    <string name="selecciona">Selecciona tu tienda favorita:</string>
    <string name="pais">País de residencia *</string>
    <string name="siguiente">Siguiente >></string>
    <string name="nodocumento">Número de Documento *</string>
    <string name="nonit">NIT</string>
    <string name="paganterior"><u>« Página Anterior</u></string>
    <string name="genero">Género</string>
    <string name="fechanac">Fecha de Nacimiento</string>
    <string name="numtelefono">Número de Teléfono *</string>
    <string name="contrasena">Contraseña *</string>
    <string name="confirmar">Confirmar Contraseña *</string>
    <string name="politicadatos">Acepto la Política de Protección y Datos >></string>
    <string name="terminos">Acepto los Términos y Condiciones >></string>
    <string name="camposrequeridos">* Campos requeridos</string>


    <string name="aviso">Aviso</string>
    <string name="tupais">Por favor selecciona tu País..</string>
    <string name="tunombre">Por favor scribe tu nombre..</string>
    <string name="tuapellido">Por favor scribe tus apellidos..</string>
    <string name="tudocumento">Por favor selecciona el tipo de documento..</string>
    <string name="tudocnumer">Por favor escribe tu número de documento..</string>
    <string name="tunit">Por favor escribe tu número de nit..</string>
    <string name="tugenero">Por favor selecciona el género..</string>
    <string name="tufecha">Por favor selecciona tu fecha de nacimiento..</string>
    <string name="tuphone">Por favor escribe tu Número de telefono..</string>
    <string name="tuemail">Por favor escribe tu Correo Electrónico..</string>
    <string name="tuemailinvalido">Tu Correo Electrónico es invalido..</string>
    <string name="tupass">Por favor escribe tu contraseña..</string>
    <string name="tucpass">Por favor confirma tu contraseña..</string>
    <string name="tuminpass">Por favor tu contraseña debe contener al menos 8 caractéres..</string>
    <string name="passcoinciden">Tu contraseña no coincide..</string>
    <string name="checkpolitica">Por favor acepta la politica de Protección de datos </string>
    <string name="checkterminos">Por favor acepta los términos y condiciones</string>

    <string name="invalidlogin">La contraseña es invalida o el usuario no existe!</string>


    <string name="iniciasesion">INICIAR SESIÓN</string>
    <string name="olividopass"><u>Olvidaste tu contraseña</u></string>
    <string name="enviacorreo">Enviar correo</string>
    <string name="siaun">Si aún no tienes cuenta,</string>
    <string name="registroexitoso">Registro de usuario exitoso</string>
    <string name="registroinvalido">No fue posible registrar la usuario, verífique el usuario no haya sido dado de alta anteriormente.</string>


    <string name="seenviocorreo">!Se ha enviado un correo, con las instrucciones para recuperar tu contraseña!</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <string name="my_information">Mi información</string>
    <string name="account_name">Nombre de la persona</string>
    <string name="account_lastname">Apellidos de la persona</string>
    <string name="account_close"><u>Cerrar sessión</u></string>
    <string name="account_save">Guardar Cambios</string>

    <string name="my_notificacions">Notificaciones</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="please_input">Por favor ingresa tus datos de registro</string>

    <string name="my_points">Mis Puntos</string>
    <string name="gana">¡Gana 100 puntos al referir!</string>
    <string name="hola">¡Hola,</string>
    <string name="plata">Plata</string>
    <string name="nivel">Nivel actual</string>
    <string name="puntosdisponibles">Puntos Disponibles</string>
    <string name="respondeygana">¡RESPONDE Y GANA!</string>
    <string name="queremos">Queremos conocerte mejor y hacer tu experiencia en Puntos ADOC la mejor.</string>


    <string name="question1">¿Cuál es tu talla de zapato?</string>
    <string name="question2">¿Cuál fué tu última compra?</string>
    <string name="question3">¿Cuál es tu marca favorita?</string>
    <string name="responder">RESPONDER</string>
    <string name="respuesta">RESPUESTA</string>
    <string name="enviar">ENVIAR</string>
    <string name="maspreguntas"><u>Responder más preguntas</u></string>
    <string name="refiereamino">Refiere a un amigo, ¡ gana 100 puntos!</string>

    <string name="editarperfil">Editar Perfil</string>
    <string name="configuraralertas">Configurar alertas</string>
    <string name="contactanos">Contáctanos</string>
    <string name="profavoringresa">Por favor ingresa tus datos de registro</string>
    <string name="restablecer">Re establecer contraseña</string>
    <string name="chatea">Chatea con nosotros</string>
    <string name="escribenos">Escribenos</string>
    <string name="configraralertas">Configurar alertas</string>
    <string name="notificacionessms">Notificaciones SMS</string>
    <string name="notificacionespush">Notificaciones push</string>
    <string name="notificacionesemail">Notificaciones email</string>
    <string name="informacionpersonal">Información Personal</string>
    <string name="ubicacion">Ubicación</string>
    <string name="noactpassword">No fue posible cambiar su contraseña</string>


    <string name="tablapuntos">TABLA DE PUNTOS</string>
    <string name="puntiosespeciales">PUNTOS ESPECIALES</string>
    <string name="nuestrastiendas">Nuestras tiendas</string>

    <string name="necesitas">Necesitas</string>
    <string name="hasredimido">Has redimido</string>
    <string name="actualmentetienes">Actualmente tienes</string>

    <string name="redimelosya">¡Redimelos ya!</string>
    <string name="cuentascon">Cuentas con</string>
    <string name="promocionales">Promocionales</string>
    <string name="disponibles">Disponibles</string>
    <string name="redimidos">Redimidos</string>
    <string name="acumulados">Acumulados</string>
    <string name="puntospromocionalesdisponibles">Puntos promocionales disponibles.</string>
    <string name="puntosavencer">Puntos a vencer en los próximos 30 dias.</string>


    <string name="hasacumulado">Has acumulado</string>
    <string name="entunivelactual">de avance en tu nivel actual.</string>
    <string name="puntos">Puntos</string>
    <string name="estasaunavance">Actualmente tienes un</string>
    <string name="parasubirdenivel">Para subir de nivel.</string>
    <string name="puntosacumulados">Acumulados</string>
    <string name="vigenciade">Vigencia de</string>
    <string name="acercade">Acerca de</string>
    <string name="masinformacion">Más información</string>

    <string name="puntosadoc">Puntos ADOC</string>
    <string name="preguntasfrecuentes">Preguntas frecuentes</string>
    <string name="terminos_condiciones">Términos y condiciones</string>
    <string name="politica_privacidad">Política de privacidad</string>

    <string name="errorservidor">No fue posible obtener la información..</string>

    <string name="teinvito">te invitó a ser parte de Puntos Adoc</string>
    <string name="puntosadoces">Puntos Adoc es el programa de lealtad en el que podras acumular y redimir puntos en cualquiera de nuestras marcas.</string>
    <string name="gana1000">Gana 1000 puntos al regístrarte hoy. Este es el enlace de mi invitación:</string>

    <string name="default_notification_channel_id">AppAdoc_default_notifications</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>