<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.7"
            app:srcCompat="@drawable/puntos1"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="25dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />



    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profavoringresa"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                />



        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_email_ingresar"
                style="@style/InputGeneral"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@drawable/roundtext"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/envelope_icon"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />



        </LinearLayout>








        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/input_password_ingresar"
                style="@style/InputGeneral"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtext"
                android:drawableLeft="@drawable/lock_icon"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <ImageButton
                android:id="@+id/button_loginviewpass"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:foregroundGravity="right"
                android:src="@drawable/icon_eye_close" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/OlvidoButton"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/olvidastecontrasena"
                />



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />





        </LinearLayout>




         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/IngresarButton"
    style="@style/roounded_button"
    android:layout_width="@dimen/rounded_button"
    android:layout_height="match_parent"
    android:text="@string/iniciasesion"
    />



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

             <View
                 android:layout_width="match_parent"
                 android:background="@color/AppAdocGray"
                 android:layout_height="2dp"
                 />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siaun"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/roounded_button_clear"
                android:id="@+id/RegistrarButton_aviso"
                android:layout_width="@dimen/rounded_button"
                android:layout_height="match_parent"
                android:text="@string/registrate"
                />



            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />



        </LinearLayout>







</LinearLayout>


</ScrollView>